Layout bugfixes.

--- a/styles/block/confirmation.sass
+++ b/styles/block/confirmation.sass
@@ -14,6 +14,7 @@
             margin-top: 0
             border-bottom: 1px solid $color-usual-gray
         &.payment-title
+            margin-top: 45px
             margin-bottom: 15px
 
     .line
