--- a/styles/components/notifications.sass
+++ b/styles/components/notifications.sass
@@ -3,11 +3,12 @@
     position: sticky
     top: 10px
     left: 100%
-    padding: 10px 20px
     max-width: 300px
     z-index: 102
-    margin-bottom: -100vh
-    height: 100vh
+    .wrapper
+        position: absolute
+        padding: 10px 20px
+        width: 100%
     .item
         background: #FFFFFF
         box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2)
